Bug 1288318 - Initialize TSFTextStore::mInputScopes at initializing its members rather than after setting focus to the context. r=m_kato, a=sledru

In CreateAndSetFocus(), SetInputScope() is called *after* setting focus to the context. At this time, Google Japanese Input retrieves InputScopes. Therefore, TSFTextStore returns IS_DEFAULT. But after that, Google Japanese Input tries to retrieve InputScopes after every notification (in this case, a call of ITextStoreACPSink::OnLayoutChange()). Then, we return IS_URL due to set after returns IS_DEFAULT.

This is actually our fault, but according to the other TIPs, Google Japanese Input shouldn't commit composition at detecting an InputScope change, though.

MozReview-Commit-ID: 2tPlcEA0MI0

--HG--
extra : source : 1523dc120715d264e3d02ebdf9d8988b4421a1d6
extra : amend_source : fabc7f01b2c703da783abd1aef2d389bba01a988